# serving_ml_model

./: app.py  frontend.py  pyproject.toml
model/: predict.py
schema/: prediction_response.py  user_input.py
